# qtmwidgets

./: .gitignore  CMakeLists.txt  QtMWidgets.pro  README.md  codecov.yml
.github/workflows/: codeql-analysis.yml  testing.yml
.reuse/: dep5
QtMWidgets/: picker.cpp  picker.hpp
examples/: CMakeLists.txt
examples/desktop/: CMakeLists.txt  desktop.pro
examples/desktop/busyindicator/: CMakeLists.txt  main.cpp
examples/desktop/datepicker/: CMakeLists.txt  main.cpp
examples/desktop/datetimepicker/: CMakeLists.txt  main.cpp
examples/desktop/imagelist/: CMakeLists.txt  image_list.cpp  image_list.hpp  main.cpp  window.cpp  window.hpp
examples/desktop/listview/: CMakeLists.txt  listview.pro  main.cpp
examples/desktop/messagebox/: CMakeLists.txt  main.cpp  messagebox.pro
examples/desktop/navigationarrow/: CMakeLists.txt  main.cpp
examples/desktop/navigationbar/: CMakeLists.txt  main.cpp  navigationbar.pro
examples/desktop/navigationbutton/: CMakeLists.txt  main.cpp
examples/desktop/pageview/: CMakeLists.txt  main.cpp
examples/desktop/picker/: CMakeLists.txt  main.cpp  picker.pro
examples/desktop/progressbar/: CMakeLists.txt  main.cpp
examples/desktop/scrollarea/: CMakeLists.txt  main.cpp  scrollarea.pro
examples/desktop/slider/: CMakeLists.txt  main.cpp
examples/desktop/stepper/: CMakeLists.txt  main.cpp
examples/desktop/switch/: CMakeLists.txt  main.cpp
examples/desktop/tableview/: CMakeLists.txt  main.cpp
examples/desktop/textedit/: textedit.pro
examples/desktop/timepicker/: CMakeLists.txt  main.cpp
examples/desktop/toolbar/: CMakeLists.txt  main.cpp  toolbar.pro
examples/mobile/picker/: CMakeLists.txt  main.cpp
examples/mobile/picker/android/: AndroidManifest.xml
examples/mobile/scrollarea/: main.cpp
include/QtMWidgets/private/: fingergeometry.hpp
src/: CMakeLists.txt  Picker  abstractlistmodel.hpp  abstractlistview.cpp  abstractlistview.hpp  abstractscrollarea.cpp  abstractscrollarea.hpp  busyindicator.cpp  busyindicator.hpp  color.cpp  color.hpp  datepicker.cpp  datepicker.hpp  datetimepicker.cpp  datetimepicker.hpp  fingergeometry.cpp  fingergeometry.hpp  lineedit.cpp  lineedit.hpp  listmodel.hpp  messagebox.cpp  messagebox.hpp  navigationarrow.cpp  navigationarrow.hpp  navigationbar.cpp  navigationbar.hpp  navigationbutton.cpp  navigationbutton.hpp  pagecontrol.cpp  pagecontrol.hpp  pageview.cpp  pageview.hpp  picker.cpp  picker.hpp  progressbar.cpp  progressbar.hpp  scrollarea.cpp  scrollarea.hpp  scroller.cpp  scroller.hpp  (+17 more)
src/private/: abstractlistview_p.hpp  abstractscrollarea_p.hpp  color.cpp  cursorshifter.cpp  datetimeparser.cpp  datetimeparser.hpp  drawing.cpp  drawing.hpp  layoutengine.cpp  layoutengine.hpp  listmodel_p.hpp  messageboxbutton.cpp  messageboxbutton.hpp  scrollarea_p.hpp  scroller.cpp  scroller.hpp  tableview_p.hpp  utils.cpp  utils.hpp
tags/1.0.0/: COPYING
tags/1.0.0/src/: picker.cpp  src.pro  tableview.cpp  textlabel.hpp
tags/1.0.1/src/: lineedit.hpp  navigationarrow.cpp  tableview.cpp  textedit.hpp
tags/1.0.2/src/: busyindicator.hpp  navigationarrow.hpp  picker.cpp  scrollarea.hpp  slider.hpp  switch.cpp  textlabel.hpp
tags/1.0.3.1/src/: datetimepicker.cpp  navigationbar.cpp
tags/1.0.3/doc/: Doxyfile
tags/1.0.3/src/: color.cpp  scrollarea.cpp  slider.cpp
tags/1.0.4.1/src/: navigationarrow.cpp  navigationbutton.cpp  scrollarea.cpp  tableview.hpp
tags/1.0.4.10/src/: abstractscrollarea.hpp  messagebox.cpp  scrollarea.cpp
tags/1.0.4.11/doc/: Doxyfile
tags/1.0.4.11/src/: textedit.cpp
tags/1.0.4.12/src/: switch.hpp
tags/1.0.4.13/src/: abstractlistview.hpp  pageview.cpp
tags/1.0.4.14/src/: navigationarrow.cpp
tags/1.0.4.16/src/: datepicker.cpp  messagebox.cpp
tags/1.0.4.17/src/: navigationbutton.hpp  pagecontrol.cpp
tags/1.0.4.19/src/: abstractscrollarea.cpp  busyindicator.cpp  messagebox.hpp  picker.cpp  switch.cpp  textedit.hpp
tags/1.0.4.2/src/: color.hpp  scroller.hpp  src.pro  textlabel.cpp
tags/1.0.4.3/src/: navigationbar.cpp
tags/1.0.4.4/: README
tags/1.0.4.4/src/: textedit.cpp  toolbar.cpp
tags/1.0.4.5/src/: lineedit.hpp  tableview.cpp
tags/1.0.4.6/src/: abstractscrollarea.cpp  pageview.cpp  textedit.cpp
tags/1.0.4.7/src/: pagecontrol.hpp
tags/1.0.4.9/examples/: examples.pro
tests/: tests.pro
tests/auto/: CMakeLists.txt  auto.pro
tests/auto/arrow/: CMakeLists.txt  arrow.pro  main.cpp
tests/auto/busy/: CMakeLists.txt  busy.pro  main.cpp
tests/auto/datetime/: CMakeLists.txt  main.cpp  switch.pro
tests/auto/listview/: CMakeLists.txt  listview.pro  main.cpp
tests/auto/messagebox/: CMakeLists.txt  main.cpp  messagebox.pro
tests/auto/navbar/: CMakeLists.txt  main.cpp  navbar.pro
tests/auto/navbutton/: CMakeLists.txt  main.cpp  navbutton.pro
tests/auto/pagecontrol/: CMakeLists.txt  main.cpp  pagecontrol.pro
tests/auto/pageview/: CMakeLists.txt  main.cpp  pageview.pro
tests/auto/picker/: CMakeLists.txt  main.cpp  picker.pro
tests/auto/progress/: CMakeLists.txt  main.cpp  progress.pro
tests/auto/slider/: CMakeLists.txt  main.cpp  slider.pro
tests/auto/stepper/: CMakeLists.txt  main.cpp  stepper.pro
tests/auto/switch/: CMakeLists.txt  main.cpp  switch.pro
tests/auto/table/: CMakeLists.txt  main.cpp  table.pro
tests/auto/toolbar/: CMakeLists.txt  main.cpp  resources.qrc  toolbar.pro
trunk/: QtMWidgets.pro
trunk/QtMWidgets/: QtMWidgets.pro  picker.hpp
trunk/src/: abstractlistmodel.hpp  abstractlistview.hpp  abstractscrollarea.cpp  abstractscrollarea.hpp  busyindicator.cpp  busyindicator.hpp  color.cpp  datepicker.cpp  datepicker.hpp  datetimepicker.cpp  datetimepicker.hpp  fingergeometry.cpp  lineedit.cpp  messagebox.cpp  navigationarrow.cpp  navigationarrow.hpp  navigationbar.cpp  navigationbar.hpp  navigationbutton.cpp  navigationbutton.hpp  pagecontrol.cpp  pagecontrol.hpp  pageview.cpp  pageview.hpp  picker.cpp  picker.hpp  progressbar.cpp  progressbar.hpp  scrollarea.cpp  scrollarea.hpp  scroller.cpp  slider.cpp  slider.hpp  src.pro  stepper.cpp  switch.cpp  switch.hpp  tableview.cpp  tableview.hpp  textedit.cpp  (+7 more)
(+128 files in other folders)
