
project( desktop )

add_subdirectory( busyindicator )
add_subdirectory( datepicker )
add_subdirectory( datetimepicker )
add_subdirectory( imagelist )
add_subdirectory( listview )
add_subdirectory( messagebox )
add_subdirectory( navigationarrow )
add_subdirectory( navigationbar )
add_subdirectory( navigationbutton )
add_subdirectory( pageview )
add_subdirectory( picker )
add_subdirectory( progressbar )
add_subdirectory( scrollarea )
add_subdirectory( slider )
add_subdirectory( stepper )
add_subdirectory( switch )
add_subdirectory( tableview )
add_subdirectory( timepicker )
add_subdirectory( toolbar )
