
project( tests )

add_subdirectory( picker )
add_subdirectory( switch )
add_subdirectory( stepper )
add_subdirectory( datetime )
add_subdirectory( busy )
add_subdirectory( listview )
add_subdirectory( arrow )
add_subdirectory( messagebox )
add_subdirectory( slider )
add_subdirectory( navbutton )
add_subdirectory( pageview )
add_subdirectory( navbar )
add_subdirectory( progress )
add_subdirectory( pagecontrol )
add_subdirectory( table )
add_subdirectory( toolbar )
